--- a/estilos.css
+++ b/estilos.css
@@ -48,9 +48,6 @@ body {
 botonera
 */
 
-.nav {
-    background-color: antiquewhite;
-}
 .nav-lista {
     background-color: var(--naranja);
     list-style: none;
@@ -58,6 +55,7 @@ botonera
     align-items: center;
     padding: 12px;
     padding-left: 40px;
+    margin-bottom: 32px;
 }
 
 .nav-form {
@@ -74,5 +72,47 @@ botonera
     color: var(--blanco);
 }
 .nav-link:hover {
-    background-color: cadetblue;
+    text-decoration: underline;
+}
+
+/* .......imagen...........*/
+.imagen {
+    text-align: center;
+    margin-bottom: 32px;
+}
+
+.productos {
+    background-color: pink;
+    margin-bottom: 32px;
+    display: grid;
+    grid-template-columns: 330px 1fr;
+    gap: 20px;
+}
+.izquierda {
+    background-color: aqua;
+}
+.derecha {
+    background-color: lightblue;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.producto {
+    background-color: chocolate;
+}
+
+.producto-title {
+    margin-bottom: 12px;
+    font-size: 20px;
+}
+
+.producto-contenedor {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    gap: 20px;
+}
+
+.producto-contenedor p {
+    padding-top: 8px;
+    font-size: 14px;
 }
