--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
     --naranja: #f90;
     --amarillo: rgb(212, 212, 117);
     --gris-oscuro: #27262b;
+    --verde: green;
     --gris-claro: #ccc;
     --blanco: #fff;
     --negro: #000;
@@ -17,8 +18,7 @@
 }
 
 body {
-    background-color: var(--gris-oscuro);
-    background-image: url(images/pattern.jpg);
+    background-color: var(--verde);
     font-family: Arial, Helvetica, sans-serif;
 }
 
