--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,7 @@
     --naranja: #f90;
     --amarillo: rgb(212, 212, 117);
     --gris-oscuro: #27262b;
-    --verde: red;
+    --verde: green;
     --gris-claro: #ccc;
     --blanco: #fff;
     --negro: #000;
